The borders on product listing had somehow got misaligned, this fixes the issue.

--- a/assets/frontend/css/styles.css
+++ b/assets/frontend/css/styles.css
@@ -775,7 +775,7 @@ ul.products-grid li a.minimal-price-link {
 }
 
 ul.products-grid li div.actions {
-    margin-top: 25px;
+    margin-top: 26px;
 }
 
 ul.products-grid li div.price-box + div.actions {
